# proving-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  readme.md  recipe.json  run.sh
.github/workflows/: integration_tests.yml  tests.yml  unit_tests.yml
crates/server/: Cargo.toml  readme.md
crates/server/src/: db.rs  errors.rs  main.rs  models.rs  prover.rs  routes.rs  storage.rs  test.rs  types.rs  utils.rs  worker.rs
src/: handler.rs  main.rs  prover.rs  routes.rs  storage.rs  types.rs  utils.rs
