[package]
name = "proving-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = {version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.7"