[package]
edition = "2021"
name = "proving-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.7"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
